--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
+
+    implementation "de.hdodenhof:circleimageview:3.1.0"
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
